# merkle-email-hub

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  .trivyignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  Merkle_Email_Innovation_Hub_Plan.md  PRD.md  README.md  TECH_DEBT_AUDIT.md  TODO.md  conftest.py  copier.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  email-developer-workflow.excalidraw  feature-flags.yaml  harnessing_agents.txt  idea_outreach.txt  mcp-config.json  plan.md  presentation.html  pyproject.toml  renovate.json5  reset_pw.py  watch-pages.sh
.agents/: deferred-items.json
.agents/plans/: 0.2-shadcn-ui-component-library.md  0.3-openapi-typescript-sdk.md  0.4-api-client-completion.md  0.4-api-hooks-and-1.1-dashboard.md  1.1-project-dashboard-backend.md  1.2-project-workspace-backend.md  1.2-project-workspace-layout.md  1.3-monaco-editor-completion.md  1.5-test-persona-engine-ui.md  1.6-template-crud-persistence.md  10.1-project-target-clients-selector.md  10.10-sdk-regeneration-type-coverage.md  10.11-blueprint-aware-chat-mode.md  10.12-intelligence-dashboard-enhancements.md  10.13-agentic-ui-frontend-adoption.md  10.2-onboarding-compatibility-brief-ui.md  10.3-blueprint-run-trigger-pipeline-visualisation.md  10.5-component-compatibility-badges-matrix.md  10.6-graph-powered-knowledge-search.md  10.7-failure-pattern-dashboard.md  10.8-agent-confidence-handoff-visibility.md  10.9-workspace-agent-context-panel.md  11.1-qa-check-configuration.md  11.10-css-support-syntax-validation.md  11.11-brand-compliance-rules-engine.md  11.12-personalisation-syntax-validation.md  11.13-outlook-fixer-mso-diagnostic-validator.md  11.14-dark-mode-meta-tag-injector.md  11.15-scaffolder-mso-first-generation.md  11.16-personalisation-per-platform-syntax-validator.md  11.17-code-reviewer-actionability-framework.md  11.18-accessibility-alt-text-quality-framework.md  11.19-content-agent-length-guardrails.md  11.2-html-validation-dom-parser.md  11.20-recovery-router-enriched-failure-context.md  11.21-deterministic-micro-judges.md  11.22-deterministic-agent-architecture.md  11.22.3-multi-pass-generation-pipeline.md  11.22.4-cascading-auto-repair.md  11.22.5-skill-md-rewrite.md  (+412 more)
.claude/: launch.json  settings.json
.claude/commands/: CLAUDE.md  WORKFLOW.md  be-code-review-fix.md  be-execute.md  be-planning.md  be-prime.md  be-ship.md  be-validate.md  commit.md  e2e-test.md  excalidraw.md  fe-code-review-fix.md  fe-execute.md  fe-parallel-plan.md  fe-planning.md  fe-preflight-check.md  fe-prime.md  fe-ship.md  fe-validate.md  parallel-plan.md  preflight-check.md  review.md  security-audit.md  update-docs.md
.claude/docs/: architecture-deep-dive.md  design-system-guide.md  eval-system-guide.md  qa-engine-guide.md
.claude/hooks/: block-dangerous.sh  pre-commit-security.sh  restore-context.sh
.claude/rules/: architecture.md  backend.md  deferred-items.md  doc-and-code-research.md  frontend.md  security.md  testing.md
.claude/state/: agent-context.json.example
.dcg/: email-hub.yml  merkle-email-hub.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dast.yml  deploy-pages.yml  mutmut.yml  semgrep.yml
.semgrep/rules/: falsy-numeric-trap.yaml
.semgrep/tests/: falsy-numeric-trap.py  falsy-numeric-trap.yaml
.zap/: rules.tsv
alembic/: CLAUDE.md  env.py
alembic/versions/: 2bac390231df_add_email_hub_models.py  2eb1d5b05ad3_merge_heads.py  CLAUDE.md  a0b1c2d3e4f5_add_connection_config_json.py  a1b2c3d4e5f6_add_component_qa_result.py  a1b2c3d4e5f6_add_design_connections.py  a1b2c3d4e5f6_add_fidelity_json_to_design_imports.py  (+43 more)
app/: CLAUDE.md  main.py  seed_demo.py
cms/: .dockerignore  .prettierignore  .prettierrc.json  CLAUDE.md  package.json  pnpm-lock.yaml  turbo.json
data/: email-client-matrix.yaml  email_client_fonts.yaml
db/: CLAUDE.md  Dockerfile
docs/: ARCHITECTURE.md  CLAUDE.md  DESIGN_END_TO_END_PIPELINE.md  PRD-implementation-status.md  SKILL_email-dark-mode-dom-reference.md  SKILL_email-file-size-guidelines.md  SKILL_email-image-optimization-dom-reference.md  SKILL_email-link-validation-dom-reference.md  SKILL_email-spam-score-dom-reference.md  SKILL_html-email-css-dom-reference.md  SKILL_outlook-mso-fallback-reference.md  TODO-completed.md  audit_2.md  audit_2_phase1.md  audit_2_phase2.md  audit_2_phase3.md  audit_2_phase4.md  compiling_code.txt  coverage-baseline.md  dependabot-status.md  dependency-debt.md  deploy-hetzner-coolify.md  design-to-html-pipeline-audit.md  developer-workflow.html  email-authoring-sublime-snippets.html  eslint-debt.md  eval-labeling-checklist.md  eval-labeling-data.json  eval-labeling-guide.md  eval-labeling-tool.html  feature-scope.md  figma-email-template-reference.md  flag-audit-debt.md  html-email-developer.md  load-baseline.md  migration-debt.md  phase-48-status.md  plan-briefs-backend.md  plan-component-extraction.md  plan-e2e-component-testing.md  (+4 more)
email-templates/: config.js  config.production.js
nginx/: nginx.conf
observability/: loki-config.yaml  promtail-config.yaml
prototypes/: conftest.py
reference/: vsa-patterns.md
scripts/: auto-label.py  backfill-conversion-memories.py  backup-db.sh  backup_db.sh  check-env-example.sh  eval-compare-verdicts.py  eval-skill-update.py  export-openapi.py  extract-snapshot-cases.py  flag-audit.py  generate-calibration-knowledge.py  generate-env-example.py  generate-labeling-data.py  generate-review-data.py  ingest-real-components.py  pre-commit  remove-i18n.mjs  restore-db.sh  safe_alembic.sh  scaffold-feature.sh  setup-mcp2cli.sh  snapshot-capture.py  squash-migrations.sh  startup.sh  sync-caniemail.py  sync-client-matrix.py  validate-overlays.py
traces/: baseline.json
workflows/: README.md  converter-training-guide.html  design-import-pipeline.md  design-sync-connection-guide.md  email-build-and-qa.md  figma-rate-limits-and-api-budget.md  multilingual-campaign.md  weekly-newsletter.md
(+2998 files in other folders)
