[project]
name = "email-hub"
version = "0.1.0"
description = "Centralised email development platform with AI-powered agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.0.0",
    "cachetools>=5.5.0",
    "croniter>=2.0",
    "fastapi>=0.120.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.1",
    "PyJWT>=2.12.0",
    "redis[hiredis]>=5.2.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.38.0",
    "anthropic>=0.43.0",
    "openai>=1.0.0",
    "python-multipart>=0.0.18",
    "pgvector>=0.4.2",
    "pillow>=12.1.1",
    "pymupdf>=1.27.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "cryptography>=44.0.0",
    "cssutils>=2.9.0",
    "nh3>=0.3.3",
    "lxml>=5.0",
    "lightningcss>=0.3.0",
    "dnspython>=2.6.0",
    "mcp>=1.27.0",
    "pycrdt>=0.12",
    "pycrdt-websocket>=0.15",
    "pyyaml>=6.0",
    "python-liquid>=1.12",
    "beautifulsoup4>=4.12",
    "aiosmtplib>=2.0",
    "scikit-image>=0.24.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
graph = [
    "cognee>=0.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pip-audit>=2.7.0",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
    "types-jsonschema>=4.26.0.20260408",
    "types-lxml>=2026.2",
    "hypothesis>=6.100",
    "playwright>=1.40",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    ".claude/worktrees",
    "email-templates",
    ".semgrep",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "S",      # flake8-bandit (security)
    "DTZ",    # flake8-datetimez
    "RUF",    # Ruff-specific rules
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "SIM",    # flake8-simplify — unnecessary if/else, ternary, comprehension
    "PERF",   # perflint — unnecessary list()/copy in loops
    "T20",    # flake8-print — stray print() in app code
    "PIE",    # flake8-pie — unnecessary pass, duplicate defaults
    "PGH",    # pygrep-hooks — blanket type:ignore, blanket noqa
    "RET",    # flake8-return — simplify return/else patterns
    "FURB",   # refurb — Python 3.12+ modernization
    "FBT",    # flake8-boolean-trap — boolean positional args
    "D",      # pydocstyle — docstring formatting (missing-docstring rules ignored below)
]

ignore = [
    "S311",   # Standard random is fine for non-crypto use
    "E501",   # Line too long (formatter handles this)
    "D100",   # Missing module docstring (enforce incrementally)
    "D101",   # Missing class docstring (enforce incrementally)
    "D102",   # Missing method docstring (enforce incrementally)
    "D103",   # Missing function docstring (enforce incrementally)
    "D104",   # Missing public package docstring
    "D105",   # Missing magic method docstring
    "D106",   # Missing nested class docstring
    "D107",   # Missing __init__ docstring
    "D203",   # One blank line before class docstring (conflicts with D211)
    "D213",   # Multi-line summary second line (conflicts with D212)
    "RET504", # Unnecessary assignment before return (readability)
    "FBT001", # Boolean positional arg in function definition
    "FBT002", # Boolean default value in function definition
    "FBT003", # Boolean positional value in call (stdlib uses this pattern)
    "PERF401", # manual-list-comprehension — too many existing uses
    "SIM117",  # multiple-with-statements — readability preference
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "ARG001", "ARG002", "D", "E731", "S105", "S106", "S108", "FBT", "SIM", "PERF", "RET"]
"test_*.py" = ["S101", "ANN", "ARG001", "ARG002", "D", "E731", "S105", "S106", "S108", "FBT", "SIM", "PERF", "RET"]
"**/tests/**/*.py" = ["S101", "ANN", "ARG001", "ARG002", "D", "E731", "S105", "S106", "S108", "FBT", "SIM", "PERF", "RET"]
"__init__.py" = ["F401", "D"]
"scripts/**/*.py" = ["T201", "D"]
"conftest.py" = ["D", "ANN", "FBT"]
"**/conftest.py" = ["D", "ANN", "FBT"]
# Routes: FastAPI Depends() triggers B008, unused DI args trigger ARG001
"app/*/routes.py" = ["B008", "ARG001", "D"]
"app/core/health.py" = ["B008", "ARG001", "D"]
"app/example/routes.py" = ["ARG001", "D"]
"app/ai/routes.py" = ["B008", "ARG001", "D"]
"app/design_sync/figma/service.py" = ["ANN401"]
# MCP tool modules: ctx is required by FastMCP convention, unused args are part of public tool API
"app/mcp/tools/**/*.py" = ["ARG001", "D"]
"app/mcp/formatting.py" = ["ANN401"]
"app/mcp/resources.py" = ["ANN401"]
"app/core/rate_limit.py" = ["B008"]
# Mock/stub provider services: unused interface args are part of the protocol
"app/design_sync/mock/**/*.py" = ["ARG001", "ARG002"]
"app/design_sync/canva/**/*.py" = ["ARG001", "ARG002"]
"app/design_sync/sketch/**/*.py" = ["ARG001", "ARG002"]
"app/seed_demo.py" = ["S105", "T20"]  # Demo seed: intentional passwords + print statements
# Migrations: auto-generated, no lint value
"alembic/**/*.py" = ["D", "ANN", "T20", "E501", "RUF", "SIM", "PERF", "RET", "PIE", "FBT", "FURB", "PGH"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "*.tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "slowapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cachetools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gunicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytesseract.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fitz.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cognee.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "liquid.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cryptography.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cssutils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hypothesis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.mcp.tools.*"
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = "croniter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.scheduling.engine"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "app.scheduling.service"
disable_error_code = ["misc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app", "tests"]
markers = [
    "integration: marks tests requiring real database (deselect with '-m \"not integration\"')",
    "benchmark: Performance benchmark tests (run with: make bench)",
    "visual_regression: Visual regression tests requiring Playwright + ODiff (run with: make rendering-regression)",
    "collab: CRDT collaboration tests (run with: make test-collab)",
    "snapshot: Snapshot regression tests — runs in make test/check CI gate (standalone: make snapshot-test)",
]

[tool.pyright]
include = ["app"]
exclude = [
    "**/__pycache__",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache"
]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnusedFunction = "warning"
reportPrivateUsage = "warning"
reportMissingTypeStubs = "none"
reportUnknownLambdaType = "none"
